[package]
name = "foldersizer_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
num_cpus = "1.16"
ratatui = "0.27"
rayon = "1.10"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
] }
